--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 body {
   display: flex;
@@ -21,18 +21,27 @@ body {
   fill: currentColor;
 }
 
-.elkit-theme--light {
+.elkit-theme--light,
+.elkit-theme--dark {
   --elkit-fontFamily: 'Open Sans', sans-serif;
+
+  --elkit-wnd-borderRadius: 4px;
+
+  --elkit-toolbar-borderRadius: 3px;
+  --elkit-toolbar-fontFamily: var(--elkit-fontFamily);
+  --elkit-toolbar-fontWeight: bold;
+  --elkit-toolbar-fontSize: 12px;
+
+  --elkit-sidebar-fontFamily: var(--elkit-fontFamily);
+  --elkit-sidebar-fontSize: 12px;
+}
+
+.elkit-theme--light {
   --elkit-textColor: #7a7a7a;
 
   --elkit-wnd-borderColor: #9d9d9d;
-  --elkit-wnd-borderRadius: 4px;
 
   --elkit-toolbar-borderBottomColor: #989898;
-  --elkit-toolbar-borderRadius: 3px;
-  --elkit-toolbar-fontFamily: var(--elkit-fontFamily);
-  --elkit-toolbar-fontSize: 12px;
-  --elkit-toolbar-fontWeight: bold;
   --elkit-toolbar-textColor: var(--elkit-textColor);
   --elkit-toolbar-textShadowColor: #d6d0cb;
   --elkit-toolbar-boxShadowLeftColor: #cfcfcf;
@@ -44,17 +53,11 @@ body {
 }
 
 .elkit-theme--dark {
-  --elkit-fontFamily: 'Open Sans', sans-serif;
   --elkit-textColor: #acb3b1;
 
   --elkit-wnd-borderColor: #141414;
-  --elkit-wnd-borderRadius: 4px;
 
   --elkit-toolbar-borderBottomColor: #222426;
-  --elkit-toolbar-borderRadius: 3px;
-  --elkit-toolbar-fontFamily: var(--elkit-fontFamily);
-  --elkit-toolbar-fontSize: 12px;
-  --elkit-toolbar-fontWeight: bold;
   --elkit-toolbar-textColor: var(--elkit-textColor);
   --elkit-toolbar-textShadowColor: #0000004d;
   --elkit-toolbar-boxShadowLeftColor: #ffffff1a;
@@ -66,9 +69,15 @@ body {
 }
 
 .elkit-wnd {
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   border: 1px solid var(--elkit-wnd-borderColor);
   border-radius: var(--elkit-wnd-borderRadius);
+}
+
+.elkit-wnd * {
+  box-sizing: border-box;
 }
 
 .elkit-fontIcon {
@@ -90,8 +99,8 @@ body {
   padding: 8px;
   padding-top: 9px;
   font-family: var(--elkit-toolbar-fontFamily);
-  font-size: var(--elkit-toolbar-fontSize);
   font-weight: var(--elkit-toolbar-fontWeight);
+  font-size: var(--elkit-toolbar-fontSize);
   color: var(--elkit-toolbar-textColor);
   text-shadow: 0 1px var(--elkit-toolbar-textShadowColor);
 
@@ -140,4 +149,65 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.elkit-wndBody {
+  flex-grow: 1;
+}
+
+.elkit-paneGroup {
+  display: flex;
+}
+
+.elkit-wndBody > .elkit-paneGroup {
+  height: 100%;
+}
+
+.elkit-sidebar {
+  width: 194px;
+  overflow: auto;
+  border-right: 1px solid #a6a6a6;
+  font-family: var(--elkit-sidebar-fontFamily);
+  font-size: var(--elkit-sidebar-fontSize);
+  background-color: #e2e2e2;
+}
+
+.elkit-navGroup-title {
+  padding: 18px 8px 6px;
+  font-weight: bold;
+  color: #707070;
+}
+
+.elkit-navGroup-item {
+  display: flex;
+  align-items: center;
+  height: 24px;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  padding: 2px 10px 2px 18px;
+  font-size: 11.5px;
+  color: #7e7c7d;
+  text-shadow: 0 1px rgba(255, 255, 255, .23);
+  -moz-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+.elkit-navGroup-item + .elkit-navGroup-item {
+  margin-top: 2px;
+}
+
+.elkit-navGroup-item--active {
+  border-top-color: #a9a9a9;
+  border-bottom-color: #bdbdbd;
+
+  background-image: linear-gradient(
+    to bottom,
+    #c5c5c5 0%,
+    #d2d2d2 100%
+  );
+}
+
+.elkit-navGroup-itemIcon {
+  margin-right: 6px;
 }
