--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ body {
   border-top-left-radius: var(--elkit-toolbar-borderRadius);
   border-top-right-radius: var(--elkit-toolbar-borderRadius);
 
-  padding: 8px;
+  padding: 8px 16px;
   padding-top: 9px;
   font-family: var(--elkit-toolbar-fontFamily);
   font-weight: var(--elkit-toolbar-fontWeight);
@@ -118,8 +118,7 @@ body {
   );
 }
 
-.elkit-toolbar-headerBtn,
-.elkit-toolbar-appIconBtn {
+.elkit-toolbarBtn {
   display: flex;
   outline: 0;
   border: 0;
@@ -129,19 +128,16 @@ body {
   background-color: transparent;
 }
 
-.elkit-toolbar-headerBtn:disabled,
-.elkit-toolbar-appIconBtn:disabled {
+.elkit-toolbarBtn::-moz-focus-inner {
+  border: 0;
+}
+
+.elkit-toolbarBtn:disabled {
   opacity: 0.5;
 }
 
-.elkit-toolbar-headerBtn + .elkit-toolbar-headerBtn,
-.elkit-toolbar-headerBtn + .elkit-toolbar-appIconBtn,
-.elkit-toolbar-appIconBtn + .elkit-toolbar-headerBtn {
+.elkit-toolbarBtn + .elkit-toolbarBtn {
   margin-left: 20px;
-}
-
-.elkit-toolbar-appIconBtn + .elkit-toolbar-appIconBtn {
-  margin-left: 15px;
 }
 
 .elkit-toolbarTitle {
