--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ body {
   --elkit-toolbar-boxShadowBottomColor: #cfcfcf;
   --elkit-toolbar-gradientColorFrom: #e6e6e6;
   --elkit-toolbar-gradientColorTo: #c4c4c4;
+
+  --elkit-toolbarBtn-color: #737373;
 }
 
 .elkit-theme--dark {
@@ -66,6 +68,9 @@ body {
   --elkit-toolbar-boxShadowBottomColor: #ffffff0d;
   --elkit-toolbar-gradientColorFrom: #3a4144;
   --elkit-toolbar-gradientColorTo: #323739;
+
+  /* FIXME */
+  --elkit-toolbarBtn-color: #737373;
 }
 
 .elkit-wnd {
@@ -124,7 +129,7 @@ body {
   border: 0;
   padding: 0;
   font-size: inherit;
-  color: inherit;
+  color: var(--elkit-toolbarBtn-color);
   background-color: transparent;
 }
 
@@ -145,6 +150,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: default;
 }
 
 .elkit-wndBody {
@@ -186,7 +192,7 @@ body {
   text-shadow: 0 1px rgba(255, 255, 255, .23);
   -moz-user-select: none;
   user-select: none;
-  cursor: pointer;
+  cursor: default;
 }
 
 .elkit-navGroup-item + .elkit-navGroup-item {
